--- a/Pibd-23_Rodin_M.S_RoadTrain_Normal/RoadTrain.resx
+++ b/Pibd-23_Rodin_M.S_RoadTrain_Normal/RoadTrain.resx
@@ -1,64 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<root>
-  <!--
-    Microsoft ResX Schema 
-
-    Version 2.0
-
-    The primary goals of this format is to allow a simple XML format
-    that is mostly human readable. The generation and parsing of the
-    various data types are done through the TypeConverter classes
-    associated with the data types.
-
-    Example:
-
-    ... ado.net/XML headers & schema ...
-    <resheader name="resmimetype">text/microsoft-resx</resheader>
-    <resheader name="version">2.0</resheader>
-    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
-    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
-    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
-    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
-    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
-        <value>[base64 mime encoded serialized .NET Framework object]</value>
-    </data>
-    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
-        <comment>This is a comment</comment>
-    </data>
-
-    There are any number of "resheader" rows that contain simple
-    name/value pairs.
-
-    Each data row contains a name, and value. The row also contains a
-    type or mimetype. Type corresponds to a .NET class that support
-    text/value conversion through the TypeConverter architecture.
-    Classes that don't support this are serialized and stored with the
-    mimetype set.
-
-    The mimetype is used for serialized objects, and tells the
-    ResXResourceReader how to depersist the object. This is currently not
-    extensible. For a given mimetype the value must be set accordingly:
-
-    Note - application/x-microsoft.net.object.binary.base64 is the format
-    that the ResXResourceWriter will generate, however the reader can
-    read any of the formats listed below.
-
-    mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with
-            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
-            : and then encoded with base64 encoding.
-    
-    mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with
-            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
-            : and then encoded with base64 encoding.
-
-    mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array
-            : using a System.ComponentModel.TypeConverter
-            : and then encoded with base64 encoding.
-    -->
+﻿<root>
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
@@ -117,4 +57,42 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="ButtonRight.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAADVSURBVFhH7daxDcJADAXQExUFFRUDUDIDNTNQMQB7MABjUFBmhIgZqBiAiooCwTfRSafwQyLk
+        s4V0X3pSEsWyGycXSkqUsodRc+mTJ1Qwed85RAYQJ5jJA+vEAcQFFmCadABxgxWYpT2AeMAWTMIGiEw2
+        hDVOHWEMvWHFWgZtCCvU1LshrEjb1w1hBTl0bgh7OYc7rOEj7GVtV1gCDSvQdIY5dIYVaalhClnCGqYO
+        MOhD9GtY02gH2cMay6ptwCTt5q6/Y9cDieuRzPVQ6n4sL/nXhPACRzwWRnGtB48AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="buttonLeft.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAACmSURBVEhL7ZZtCYAwEIYXwQhGMIIRjGAEK5jACEYwghGMYAQj6HvKwcBTBM87f+yBBzbYeOH2
+        GRKJv5HD6WjaUcEFrnvPiBZSIPs5GRxhHPp5cAG5tGbBDZQCWXWotAOUwt56CZWWjoo0SUORGl6tp5Yn
+        eigN1PaEWzDhUmqGNtcMpUka3uJynGLML5CYEppfmYzLIxHTQZdgwuUjwLh8fRKJB4SwATiC7sMMw/m3
+        AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="buttonDown.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAADGSURBVEhL7ZTRDYJAFASvBEuwBEuxBEuwBDqxBEuwBEux
+        BN1NuGRjFuXgli8mmYQc8ObjEcpOA7fRTbnA9yivN+EEX7CGec2zKAf4hDVa5RnvxbjD72iV9yJcoQuq
+        fKYr3KELObvtm7vTj+mffLbLvh/QBX7Jd1YxQDd4jnx3EWfoBrbIGU0cYctep+QMzpqN+0kslbNW4war
+        MVxMjeFiagwXU2O4mBrDxdQYLqbGcDE1houpMVxMjeFiagwXU2O4mLozQSkfKbPuk58nAJMAAAAASUVO
+        RK5CYII=
+</value>
+  </data>
+  <data name="buttonIUP.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAADISURBVEhL7ZJhDcIwGEQrAQlIQAISkIAEnCABCUhAAhKQgIRxl0ByIQdrt95+7SUvabr2ez+6
+        sjLCMGIMF1NjuJgaw8XUGC6mxnAxNYaLqTFcTI3hYmoMF1NjuJgaw8XUGC6mzuYO3eApclY1W/iEblCL
+        nMFZTRygG9YiZ0ziDN3AGnl3FjfoBv+Td2azgS3vzbO804U9dBEnz3blBF1I5ZkIV+iClN9i8O0e8DvK
+        vW7v+osd1J+Na+4twhF+wlwvyuXtSgWlvAA9ne7xfnXhgQAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
